SERVER-54919: TenantMigrationRecipientService should not create an OperationContext while holding the instance mutex